[package]
name = "tower-cookie-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
axum-core = "0.1"
cookie = { version = ">= 0.16.0-rc.1", features = ["signed", "key-expansion", "percent-encode"] }
futures-util = "0.3"
http = "0.2"
pin-project-lite = "0.2"
serde = "1"
serde_json = "1"
time = "0.3"
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1"

[dev-dependencies]
axum = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_derive = "1"
tower = "0.4"
hyper = "0.14"
